--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Biclioteca para validar cartão de crédito",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "dependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.5.0",
+    "nyc": "^13.0.1"
   }
 }
